--- a/NatureBasketBoutique/appsettings.json
+++ b/NatureBasketBoutique/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NatureBasketDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=ASFALT\\SQLEXPRESS;Database=NatureBasketDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
